[gd_scene load_steps=4 format=2]

[ext_resource path="res://Styles/TinyFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/GameUI/SubtitleUI/CurrentTextLabel/CurrentTextLabel.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GameUI/SubtitleUI/CurrentTextLabel/ClickSoundsPlayer.tscn" type="PackedScene" id=4]

[node name="CurrentTextLabel" type="Label"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="TextClearTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="ClickSoundsPlayer" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="TextWaitTimer" to="." method="_on_TextWaitTimer_timeout"]
[connection signal="timeout" from="TextClearTimer" to="." method="_on_TextClearTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
